# easypresenter_c-

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
data/: cantos.db  multimedia.db
src/: main.cpp
ui/: main_ui.slint  projector_ui.slint
